--- a/app/src/main/res/layout/activity_all_record.xml
+++ b/app/src/main/res/layout/activity_all_record.xml
@@ -10,9 +10,9 @@
         android:id="@+id/tv_allrecord"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="36dp"
-        android:text="allrecord"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="All"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,8 +22,8 @@
         android:id="@+id/btn_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="30dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:text="back"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -32,13 +32,13 @@
         android:id="@+id/btn_alldelete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="41dp"
-        android:layout_marginEnd="30dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:backgroundTint="@color/black"
         android:text="all delete"
         android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/btn_back" />
+        app:layout_constraintEnd_toStartOf="@+id/btn_back"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_list"
