--- a/app/src/main/res/layout/list_walk_item.xml
+++ b/app/src/main/res/layout/list_walk_item.xml
@@ -2,12 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:padding="10dp">
 
     <TextView
         android:id="@+id/tv_date"
-        android:layout_width="match_parent"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:textColor="@color/black"
         android:textSize="16sp"
@@ -15,12 +15,16 @@
 
     <TextView
         android:id="@+id/tv_step"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:gravity="right"
+        />
 
     <TextView
         android:id="@+id/tv_distance"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:gravity="right"
+        />
 
 </LinearLayout>
