--- a/app/src/main/res/layout/dialog_add_new_record.xml
+++ b/app/src/main/res/layout/dialog_add_new_record.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="15dp">
 
@@ -21,20 +22,22 @@
         android:layout_marginVertical="10dp"
         android:orientation="horizontal">
 
-        <Button
+        <ImageButton
             android:id="@+id/btn_datepicker"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:text="date"
-            android:textAllCaps="false" />
+            android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_baseline_calendar_month_24"
+            android:backgroundTint="@color/white"
+            />
 
         <TextView
             android:id="@+id/tv_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:layout_marginTop="64dp"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -75,22 +78,24 @@
         android:layout_marginVertical="20dp"
         android:orientation="horizontal">
 
-        <Button
+        <ImageButton
             android:id="@+id/btn_cancel"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            app:srcCompat="@drawable/ic_baseline_cancel_24"
             android:text="cancel" />
 
         <View
             android:layout_width="20dp"
             android:layout_height="match_parent" />
 
-        <Button
+        <ImageButton
             android:id="@+id/btn_add"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            app:srcCompat="@drawable/ic_baseline_input_24"
             android:text="add" />
 
     </LinearLayout>
