--- a/app/src/main/res/layout/dialog_update_record.xml
+++ b/app/src/main/res/layout/dialog_update_record.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="15dp">
 
@@ -57,23 +58,25 @@
         android:layout_marginVertical="20dp"
         android:orientation="horizontal">
 
-        <Button
+        <ImageButton
             android:id="@+id/btn_update_cancel"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            app:srcCompat="@drawable/ic_baseline_cancel_24"
             android:text="cancel" />
 
         <View
             android:layout_width="20dp"
             android:layout_height="match_parent" />
 
-        <Button
+        <ImageButton
             android:id="@+id/btn_update_execute"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="update" />
+            app:srcCompat="@drawable/ic_baseline_input_24"
+            android:text="add" />
 
     </LinearLayout>
 
