--- a/app/src/main/res/layout/list_walk_item.xml
+++ b/app/src/main/res/layout/list_walk_item.xml
@@ -7,24 +7,25 @@
 
     <TextView
         android:id="@+id/tv_date"
-        android:layout_width="100dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tv_step"
-        android:layout_width="100dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:gravity="right"
-        />
+        android:layout_weight="1"
+        android:gravity="right" />
 
     <TextView
         android:id="@+id/tv_distance"
-        android:layout_width="100dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:gravity="right"
-        />
+        android:layout_weight="1"
+        android:gravity="right" />
 
 </LinearLayout>
