set month screen background color

--- a/app/src/main/res/layout/activity_all_record.xml
+++ b/app/src/main/res/layout/activity_all_record.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".AllRecordActivity">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:alpha="0.3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/rv_list"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/footprint" />
+
     <TextView
         android:id="@+id/tv_allrecord"
         android:layout_width="wrap_content"
@@ -45,10 +56,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_baseline_close_24"
-        android:backgroundTint="@color/white"
-        />
+        app:srcCompat="@drawable/ic_baseline_close_24" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
