--- a/app/src/main/res/layout/activity_month_record.xml
+++ b/app/src/main/res/layout/activity_month_record.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".MonthRecordActivity">
 
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:alpha="0.3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/footprint" />
+
     <TextView
         android:id="@+id/tv_yearmonth"
         android:layout_width="wrap_content"
@@ -24,11 +35,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_baseline_close_24"
-        android:backgroundTint="@color/white"
-        />
+        app:srcCompat="@drawable/ic_baseline_close_24" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_list"
