--- a/app/src/main/res/layout/list_walk_item.xml
+++ b/app/src/main/res/layout/list_walk_item.xml
@@ -19,13 +19,15 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:gravity="right" />
+        android:gravity="end"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tv_distance"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:gravity="right" />
+        android:gravity="end"
+        android:textStyle="bold" />
 
 </LinearLayout>
